--- a/forclass.html
+++ b/forclass.html
@@ -1,8 +1,5 @@
-<html>
-    <head>
+---
+layout: default
+---
 
-    </head>
-    <body>
-        <h1>Hello, world!</h1>
-    </body>
-</html>
+<h1>Hello, world!</h1>
