--- a/testcal.htm
+++ b/testcal.htm
@@ -2,12 +2,15 @@
 title: Calendar
 layout: default
 ---
-This free/busy calendar is to facilitate scheduling meetings with me. When scheduling, please consider the following:
+    <p>This free/busy calendar is to facilitate scheduling meetings with me. When scheduling, please consider the following:
+    </p>
 
-* I'm located in Mountain time zone
-* My typical work hours are Monday-Friday 8:00am to 5:30pm
-* Please use your typical calendaring program to send me an appointment (e.g. Google Calendar, Microsoft Outlook, etc.)
-* Be sure to check all-day appointments listed at the top of the calendar.
+    <ul>
+        <li>I'm located in Mountain time zone</li>
+        <li>My typical work hours are Monday-Friday 8:00am to 5:30pm</li>
+        <li>Please use your typical calendaring program to send me an appointment (e.g. Google Calendar, Microsoft Outlook, etc.)</li>
+        <li>Be sure to check all-day appointments listed at the top of the calendar.</li>
+    </ul>
 
     <div>
         Calendar shown in timezone: <strong><span id="tz">-</span></strong><br/>
