--- a/calendar.html
+++ b/calendar.html
@@ -51,5 +51,8 @@ layout: default
             }
             document.getElementById("tz").innerHTML = tzDisplay;
             document.getElementById("gcal").setAttribute("src", "https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&src=YnJhbmR0QHJlZGQub3Jn&color=%237986CB&mode=WEEK&ctz=" + encodeURIComponent(tz));
+
         }
     </script>
+
+<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FDenver&amp;src=YnJhbmR0QHJlZGQub3Jn&amp;color=%237986CB&amp;mode=WEEK&amp;showNav=1&amp;showPrint=1&amp;showCalendars=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
