Custom Social Metadata for Calendar

--- a/calendar.html
+++ b/calendar.html
@@ -1,6 +1,8 @@
 ---
 title: Calendar
 layout: default
+description: Free/Busy Calendar for Brandt Redd
+og_image: https://brandtredd.org/res/Calendar.png
 ---
     <p>This free/busy calendar is to facilitate scheduling meetings with me. When scheduling, please consider the following:
     </p>
