--- a/calendar.html
+++ b/calendar.html
@@ -1,5 +1,5 @@
 ---
-title: Calendar
+title: Calendar for Brandt Redd
 layout: default
 description: Free/Busy Calendar for Brandt Redd
 og_image: https://brandtredd.org/res/Calendar.png
