Current Research Update

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@ layout: none
 <h2>Current Research</h2>
 
 <ul>
-    <li>Student Misconceptions When Disassembling and Reverse Engineering Software</li>
-    <li>Cybersecurity Principles Embedded in Computer Science Education.</li>
+  <li>Student Assessment Technology and Practice</li>
+  <li>Student Misconceptions When Disassembling and Reverse Engineering Software</li>
+  <li>Cybersecurity Principles Embedded in Computer Science Education.</li>
+  <li>File Metadata and Portable Identity</li>
 </ul>
 
 <h2>Other Efforts</h2>
