Fix bollard blog link.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ layout: none
     <li><a href="https://github.com/bredd"><img src="res/GitHub.png" alt="GitHub" />GitHub</a></li>
     <li><a href="https://www.linkedin.com/in/brandtredd"><img src="res/LinkedIn.png" alt="LinkedIn" />LinkedIn</a></li>
     <li><a href="https://twitter.com/brandtredd"><img src="res/Twitter.png" alt="Twitter" />Twitter</a></li>
-    <li><a href="http://bollard.brandtredd.com"><img src="res/Bollard.png" alt="Bollard" />Brandt's Bollard Blog</a></li>
+    <li><a href="http://bollard.brandtredd.org"><img src="res/Bollard.png" alt="Bollard" />Brandt's Bollard Blog</a></li>
 </ul>
 
 <h2>Select Career Achievements</h2>
